--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body{
   background-color: wheat;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
   justify-content: space-between;
   padding: 1rem;
   margin-top: .5rem;
